--- a/SpringCloudDemo/pom.xml
+++ b/SpringCloudDemo/pom.xml
@@ -6,10 +6,14 @@
 
     <groupId>com.itdj</groupId>
     <artifactId>itdj</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${itdj-cloud.version}</version>
     <packaging>pom</packaging>
     <modules>
         <module>cloud_eureka</module>
+        <module>cloud_config</module>
+        <module>cloud_zuul</module>
+        <module>cloud_modules</module>
+        <module>cloud_common</module>
     </modules>
 
     <parent>
@@ -24,9 +28,45 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.SR1</spring-cloud.version>
+        <itdj-cloud.version>1.0.0</itdj-cloud.version>
+        <velocity-engine-core.version>2.0</velocity-engine-core.version>
+        <sharding-jdbc-core-spring-boot-starter.version>2.0.1</sharding-jdbc-core-spring-boot-starter.version>
+        <fastjson.version>1.2.46</fastjson.version>
+        <swagger2.version>2.8.0</swagger2.version>
+        <mybatis-plus.version>2.1.9</mybatis-plus.version>
+        <jasypt.version>1.18</jasypt.version>
+        <commons-io.version>2.6</commons-io.version>
+        <fastjson.version>1.2.46</fastjson.version>
+        <hibernate-validator.version>5.4.1.Final</hibernate-validator.version>
+
+        <jjwt.version>0.9.0</jjwt.version>
+        <hutool.version>3.3.2</hutool.version>
+        <fastdfs.version>0.2.0</fastdfs.version>
+        <ttl.version>2.2.0</ttl.version>
     </properties>
 
     <dependencies>
+
+        <!--注册中心-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <!--配置中心-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <!--Lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!--测试模块-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
