--- a/SpringCloudDemo/cloud_config/src/main/resources/bootstrap.yml
+++ b/SpringCloudDemo/cloud_config/src/main/resources/bootstrap.yml
@@ -11,6 +11,7 @@ spring:
   profiles:
 #      active: subversion #svn配置方式
       active: dev
+#          active: native  #必须为native 本地配置服务
   cloud:
     config:
       enabled: true
@@ -21,11 +22,12 @@ spring:
 #          username: wangjm
 #          password: 123456
 #          defaultLabel: config
+#        native:
+#          search-locations: classpath:/config
         git:
           password: your password
           username: your username
           searchPaths: respo
-#          uri: https://github.com/forezp/SpringcloudConfig/
           uri: https://github.com/mingtin1/SpringcloudConfig/
           default-label: ${spring.profiles.active}
 
